<resources>
    <string name="app_name">Calculadora</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">popo</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="one_over_x">1/x</string>
    <string name="percent">%</string>
    <string name="equal">=</string>
    <string name="comma">,</string>
    <string name="pi">\u03C0</string>
    <string name="x2">x\u00b2</string>
    <string name="more_minus">\u00b1</string>
</resources>
