<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:columnCount="5"
    android:rowCount="5">

    <EditText
        android:id="@+id/screen"
        android:layout_gravity="fill_horizontal"
        android:inputType="numberDecimal"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="5"/>


    <Button
        android:id="@+id/number7"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/number_7"
        android:onClick="onClickNumbers"/>

    <Button
        android:id="@+id/number8"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/number_8"
        android:onClick="onClickNumbers"/>

    <Button
        android:id="@+id/number9"
        android:layout_row="1"
        android:layout_column="2"
        android:text="@string/number_9"
        android:onClick="onClickNumbers"/>

    <Button
        android:id="@+id/divide"
        android:layout_row="1"
        android:layout_column="3"
        android:text="@string/divide" />

    <Button
        android:id="@+id/percent"
        android:layout_row="1"
        android:layout_column="4"
        android:text="@string/percent" />

    <Button
        android:id="@+id/number4"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/number_4"
        android:onClick="onClickNumbers"/>

    <Button
        android:id="@+id/number5"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/number_5"
        android:onClick="onClickNumbers"/>

    <Button
        android:id="@+id/number6"
        android:layout_row="2"
        android:layout_column="2"
        android:text="@string/number_6"
        android:onClick="onClickNumbers"/>

    <Button
        android:id="@+id/multiply"
        android:layout_row="2"
        android:layout_column="3"
        android:text="@string/multiply" />

    <Button
        android:id="@+id/oneOver"
        android:layout_row="2"
        android:layout_column="4"
        android:text="@string/one_over_x" />

    <Button
        android:id="@+id/number1"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/number_1"
        android:onClick="onClickNumbers"/>

    <Button
        android:id="@+id/number2"
        android:layout_row="3"
        android:layout_column="1"
        android:text="@string/number_2"
        android:onClick="onClickNumbers"/>

    <Button
        android:id="@+id/number3"
        android:layout_row="3"
        android:layout_column="2"
        android:text="@string/number_3"
        android:onClick="onClickNumbers"/>

    <Button
        android:id="@+id/minus"
        android:layout_row="3"
        android:layout_column="3"
        android:text="@string/minus" />

    <Button
        android:id="@+id/equals"
        android:layout_row="3"
        android:layout_column="4"
        android:layout_rowSpan="2"
        android:text="@string/equal" />

    <Button
        android:id="@+id/number0"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:text="@string/number_0"
        android:onClick="onClickNumbers"/>

    <Button
        android:id="@+id/comma"
        android:layout_row="4"
        android:layout_column="2"
        android:text="@string/comma" />

    <Button
        android:id="@+id/plus"
        android:layout_row="4"
        android:layout_column="3"
        android:text="@string/plus" />

</GridLayout>